# halitBot

./: CMakeLists.txt  MyBot.cpp  README.md  run_game.bat  run_game.sh
header/: AttackTask.hpp  ConquerTask.hpp  DataCore.hpp  ShipIssue.hpp  ShipManager.hpp  Singleton.hpp  SmartShip.hpp  SupportTask.hpp  Task.hpp  Utility.hpp  Validation.hpp
src/: AttackTask.cpp  ConquerTask.cpp  ShipManager.cpp  SmartShip.cpp  SupportTask.cpp  Task.cpp
